--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "angular-bootstrap": "~0.13.4",
     "angular-cookies": "~1.4.5",
     "angular-resource": "~1.4.5",
+    "angular-ui-router": "~0.2.15",
+    "angular-ui-utils": "~3.0.0",
     "bootstrap": "~3.3.5"
   }
 }
