--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
     "bower": "^1.5.2",
     "chalk": "^1.1.1",
     "connect-mongo": "^0.8.2",
-    "cookie-parser": "~1.3.5",
+    "consolidate": "^0.13.1",
+    "cookie-parser": "^1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.11.3",
     "glob": "^5.0.14",
     "jade": "~1.11.0",
     "lodash": "^3.10.1",
     "mongoose": "^4.1.6",
     "morgan": "^1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "swig": "^1.4.2"
   }
 }
