--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "postinstall": "bower install"
   },
   "dependencies": {
+    "async": "^1.4.2",
     "body-parser": "^1.13.3",
     "bower": "^1.5.2",
     "chalk": "^1.1.1",
     "connect-mongo": "^0.8.2",
     "consolidate": "^0.13.1",
     "cookie-parser": "^1.3.5",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.11.3",
@@ -21,6 +23,8 @@
     "lodash": "^3.10.1",
     "mongoose": "^4.1.6",
     "morgan": "^1.6.1",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
   }
